[tool.poetry]
name = "repl_python3_MAX-AI"
version = "0.1.0"
description = ""
authors = ["Harshuboi <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pyttsx3 = "^2.90"
wikipedia = "^1.4.0"
comtypes = "^1.1.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
